styles/styles.css
/* ... */
div.purple-blue-gradient {
  background: linear-gradient(45deg, #643695 15%, #0378CD 95%);
}
div.purple-lightblue-gradient {
  background: linear-gradient(45deg, #643695 15%, #61CAE5 95%);
}
div.purple-lightpurple-gradient {
  background: linear-gradient(45deg, #643695 15%, #9D57A3 95%);
}
div.purple-teal-gradient {
  background: linear-gradient(45deg, #643695 15%, #007481 95%);
}
div.purple-lightteal-gradient {
  background: linear-gradient(45deg, #643695 15%, #3EBDAC 95%);
}
div.purple-orange-gradient {
  background: linear-gradient(45deg, #643695 15%, #F47723 95%);
}
div.darkgray-orange-gradient {
  background: linear-gradient(45deg, #172328 15%, #F47723 95%);
}
div.brand-neutral-dark {
  background: linear-gradient(45deg, #242d35 15%, #44545d 95%);
}
div.light-purple-gradient {
  background: linear-gradient(90deg, #fdfdff 15%, #EFF1FE 75%);
}
div.gray {
  background: #f4f4f4;
}
div.dark-gray {
  background: var(--gray3);
}
div.blue {
  background: var(--blue);
}
div.dark-blue {
  background: var(--blueDark);
}

/* Styling to change all list item bullets to the JMP blue  */
ul {
  padding: 0 0 0 16px; /* we are looking at this styling agian */
  li::marker {
    color: var(--blue);
    /* font-size: var(--heading-font-size-s); */
  }
}
/* Styling change to the sections margin  */
/* .block-padding-none:has(.columns-wrapper, .cards-wrapper), 
.block-padding-small:has(.columns-wrapper, .cards-wrapper), 
.block-padding-medium:has(.columns-wrapper, .cards-wrapper), 
.block-padding-large:has(.columns-wrapper, .cards-wrapper) {
  padding-top: 40px; 
  h2, h3 {
    margin-bottom: 32px;
  }
  h4 {
    margin: 0 0 4px 0;
  }
  h4 + p {
    margin: 0 0 32px 0;
  }
} */
.block-padding-none {
  main > div.section {
    margin: 0 auto !important;
    padding-bottom: 0;
    /* @media (width <=900px) {
      margin: 0 auto !important;
    } */
  }
}
.block-padding-small {
  &.columns, &.cards {
    margin: 0 auto !important;
    padding-bottom: 32px;
    /* @media (width <=900px) {
      margin: 0 auto !important;
    } */
  }
}
.block-padding-medium {
  &.columns, &.cards  {
    margin: 0 auto !important;
    padding-bottom: 64px;
  }
}
.block-padding-large {
  &.columns, &.cards {
    /* margin: 0 auto !important; */
    padding-bottom: 96px;
    /* @media (width <=900px) {
      margin: 0 auto !important;
      padding-bottom: 32px;
    } */
  }
}
.image-align-top {
  .columns-img-col {
    align-items: center !important;
    /* background-color: blue; */
    display: block;
    position: inherit;
    img {
      margin: 0 !important;
      @media (width <=900px) {
        display: block;
      }
    }
  }
}
/*  Icons size scaling */
.icon-xs, .icon-s, .icon-m, .icon-l, .icon-xl, .icon-xxl {
  :is(p):has(.icon) {
    margin-bottom: 0;
  }
  @media only screen and (max-width: 600px) {
    img {
      margin: 15px auto 0 auto;
    }
  }
}
.icon-inline {
  .icon {
    position: relative;
    display: inline-block;
    padding: 0 5px;
    height: auto;
  }
}
.icon-center {
  img {
    margin: 0 auto;
    display: block;
  }
}
.icon-xs {
  .icon {
    height: auto;
    width: 16px;
  }
}
.icon-s {
  .icon {
    height: auto;
    width: 32px;
  }
}
.icon-m {
  .icon {
    height: auto;
    width: 64px;
  }
}
.icon-l {
  .icon {
    height: auto;
    width: 96px;
  }
}
.icon-xl {
  .icon {
    height: auto;
    width: 128px;
  }
}
.icon-xxl {
  .icon {
    height: auto;
    width: 160px;
  }
}
.icon-xxxl {
  .icon {
    height: auto;
    width: 275px;
  }
}
/* Column layouts */
div.columns-50-50 {
  .layout-wrapper {
    .group-1 {
      width: 50%;
    }
    .group-2 {
      width: 50%;
    }
  }
}
div.columns-60-40 {
  .layout-wrapper {
    .group-1 {
      width: 60%;
    }
    .group-2 {
      width: 40%;
    }
  }
}
div.columns-40-60 {
  .layout-wrapper {
    .group-1 {
      width: 40%;
    }
    .group-2 {
      width: 60%;
    }
  }
}
div.columns-66-33 {
  .layout-wrapper {
    .group-1 {
      width: 66%;
    }
    .group-2 {
      width: 33%;
    }
  }
}
div.columns-33-66 {
  .layout-wrapper {
    .group-1 {
      width: 33%;
    }
    .group-2 {
      width: 66%;
    }
  }
}
div.columns-25-75 {
  .layout-wrapper {
    .group-1 {
      width: 25%;
    }
    .group-2 {
      width: 75%;
    }
  }
}
div.columns-75-25 {
  .layout-wrapper {
    .group-1 {
      width: calc(75% - 20px);
    }
    .group-2 {
      width: calc(25%) ;
    }
  }
}
div.columns-25-25-25-25 {
  .layout-wrapper {
    .group-1 {
      width: 25%;
    }
    .group-2 {
      width: 25%;
    }
    .group-3 {
      width: 25%;
    }
    .group-4 {
      width: 25%;
    }
  }
}
/* column breakpoints - max-width tablet 900px */
div.columns-50-50, div.columns-25-75, div.columns-75-25, div.columns-60-40, div.columns-40-60, div.columns-66-33, div.columns-33-66 {
  @media (width <=900px) {
    .layout-wrapper {
      display: block !important;
      .group-1 {
        display: block;
        width: auto;
        margin-bottom: 2rem;
      }
      .group-2 {
        display: block;
        width: 100%;
        margin-bottom: 2rem;
      }
    }
  }
}
/* Resource Center Articles */
div.success-story-body {
  .layout-wrapper {
    column-gap: 64px !important;
    .group-1 {
      h4 {
        color: var(--purple);
        font-family: var(--font-secondary);
        font-size: 1.6rem;
      }
    }
  }
  @media (width <=900px) {
    .layout-wrapper {
      display: block !important;
      .group-1 {
        display: block;
        width: auto;
        margin: 0 0 40px 0;
        padding: 20px;
        border: 1px solid #d0d0d0;
        background-color: #f4f4f4;
        border-radius: var(--base-radius);
      }
    }
  }
}
/* ... */

